--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -1,14 +1,38 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Node JS</title>
-</head>
-<body>
-    <h1>test EJS home page</h1>
-    <div class="">
-        <%= data %>
-    </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
+  <body>
+   <div class="container mt-4">
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">FirstName</th>
+                <th scope="col">LastName</th>
+                <th scope="col">Email</th>
+                <th scope="col" colspan="4">Address</th>
+              </tr>
+            </thead>
+            <tbody>
+                    <% for(var i=0; i < data.length; i++) { %>
+                       <tr>
+                        <td><%= i+1%></td>
+                         <td><%= data[i].firstName%></td>
+                         <td><%= data[i].lastName %></td>
+                         <td><%= data[i].email %></td>
+                         <td><%= data[i].address %></td>
+                         <td ><a href="editUser?id=<%= data[i].id %>"  class="btn btn-primary">Edit</a></td>
+                         <td ><a href="deleteUser?id=<%= data[i].id %>"  class="btn btn-danger">Delete</button></td>
+                       </tr>
+                    <% } %>       
+            </tbody>
+          </table>
+   </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
